unpackaged/main/default/objects/Tutorial_Tour_Draft__c/Tutorial_Tour_Draft__c.object-meta.xml
<CustomObject>
    <label>Tutorial Tour Draft</label>
    <nameField>
        <label>Tour Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tutorial Tour Drafts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>