unpackaged/main/default/objects/Tutorial_Tour_Draft__c/fields/Auto_Start__c.field-meta.xml
<CustomField>
    <fullName>Auto_Start__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Start</label>
    <type>Checkbox</type>
</CustomField>