unpackaged/main/default/objects/Tutorial_Tour_Draft__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <label>Label</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>