unpackaged/main/default/objects/Tutorial_Tour_Draft__c/fields/Tour_Key__c.field-meta.xml
<CustomField>
    <fullName>Tour_Key__c</fullName>
    <externalId>true</externalId>
    <label>Tour Key</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>